<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question_three"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_background"
    tools:context="cominbrandonrjpeyton.linkedin.www.quizapp.Question3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/question_three"
            android:textColor="@color/primarytext"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/q3_optionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/q3_optionA"
            android:textColor="@color/secondarytext"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q3_optionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/q3_optionB"
            android:textColor="@color/secondarytext"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q3_optionC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/q3_optionC"
            android:textColor="@color/secondarytext"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q3_optionD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/q3_optionD"
            android:textColor="@color/secondarytext"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitAnswer"
            android:text="@string/submit_answer" />

    </LinearLayout>


</ScrollView>
